[metadata]
name = torchflow
version = 0.0.1
description = Lightweight PyTorch training utilities (Trainer, Callbacks, Tuner)
long_description = file: README.md
long_description_content_type = text/markdown
author = Muyiwa J. Obadara
author_email = muyiwa.j.obadara@gmail.com
url = https://github.com/mobadara/torchflow
license = MIT

[options]
packages = find:
install_requires =
    torch>=1.7

[options.extras_require]
dev =
    pytest
    black
    flake8
docs =
    sphinx
