[metadata]
name = torchflow
version = 0.0.1
description = Lightweight PyTorch training utilities (Trainer, Callbacks, Tuner)
long_description = file: README.md
long_description_content_type = text/markdown
author = Muyiwa J. Obadara
author_email = muyiwa.j.obadara@gmail.com
url = https://github.com/mobadara/torchflow
license = MIT

[options]
packages = find:
install_requires =
    # core runtime dependencies are optional and provided via extras to avoid
    # pulling heavy packages (like torch) on lightweight operations such as
    # building docs or installing editable checkouts in CI.
    

[options.extras_require]
dev =
    pytest
    black
    flake8
docs =
    sphinx
torch =
    torch>=1.7
